--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^2.0.0",
     "svelte": "^3.54.0",
-    "vite": "^4.0.0"
+    "vite": "^4.0.0",
+    "sass": "^1.53.0",
+    "svelte-preprocess": "^4.10.7",
+    "bulma": "^0.9.4"
   }
 }
